# fastapi-ws-rpc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTORING_PROGRESS.md  pyproject.toml
.github/workflows/: tests.yml
examples/: bidirectional_client_example.py  bidirectional_server_example.py  simple_client_example.py  simple_server_example.py  websocket_client_example.py  websocket_server_example.py
fastapi_ws_rpc/: __init__.py  config.py  connection_manager.py  exceptions.py  logger.py  rpc_channel.py  rpc_methods.py  schemas.py  simplewebsocket.py  utils.py  websocket_rpc_client.py  websocket_rpc_endpoint.py  websocket_wrapper.py
fastapi_ws_rpc/_internal/: __init__.py  caller.py  method_invoker.py  promise_manager.py  protocol_handler.py  protocols.py  rpc_keepalive.py  rpc_retry.py
tests/: advanced_rpc_test.py  basic_rpc_test.py  binary_rpc_test.py  conftest.py  custom_methods_test.py  fast_api_depends_test.py  test_close_codes.py  test_concurrent_operations.py  test_error_scenarios.py  test_integration_network.py  test_method_invoker.py  test_promise_manager.py  test_protocol_handler.py  test_stress_scenarios.py  test_subprotocol_negotiation.py  trigger_flow_test.py
