[tool.poetry]
name = "fastapi_ws_rpc"
version = "0.2.0"
description = "A fast and durable bidirectional JSON RPC channel over Websockets and FastApi."
readme = "README.md"
license = "MIT"
authors = ["Or Weis <or@permit.io>"]
homepage = "https://github.com/permitio/fastapi_websocket_rpc"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI"
]
keywords = ["fastapi", "websockets", "rpc", "json", "bidirectional"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.115.12"
packaging = "^24.2"
pydantic = "^2.11.3"
uvicorn = "^0.34.1"
websockets = "^15.0.1"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
