[tool.poetry]
name = "fastapi_ws_rpc"
version = "0.2.0"
description = "A fast and durable bidirectional JSON RPC channel over Websockets and FastApi."
readme = "README.md"
license = "MIT"
authors = ["Or Weis <or@permit.io>"]
homepage = "https://github.com/permitio/fastapi_websocket_rpc"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI"
]
keywords = ["fastapi", "websockets", "rpc", "json", "bidirectional"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.120.0"
packaging = "^25.0"
pydantic = "^2.11.3"
uvicorn = "^0.38.0"
websockets = "^15.0.1"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
mypy = "^1.18.2"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
