[tool.poetry]
name = "fastapi_ws_rpc"
version = "1.1.0"
description = "A fast and durable bidirectional JSON RPC channel over Websockets and FastApi."
readme = "README.md"
license = "MIT"
authors = ["Or Weis <or@permit.io>"]
homepage = "https://github.com/permitio/fastapi_websocket_rpc"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI"
]
keywords = ["fastapi", "websockets", "rpc", "json", "bidirectional"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.120.0"
packaging = "^25.0"
pydantic = "^2.11.3"
uvicorn = "^0.38.0"
websockets = "^15.0.1"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
mypy = "^1.18.2"
pytest-cov = "^7.0.0"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "N801",   # Class name should use CapWords (DEFAULT_TIMEOUT is a sentinel)
    "PTH109", # os.getcwd() -> Path.cwd() (not critical, can fix later)
    "RUF006", # Store asyncio.create_task reference (fire-and-forget tasks)
    "RUF012", # Mutable class attributes with ClassVar (not critical, can fix later)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # Allow lowercase function names in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=fastapi_ws_rpc",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",  # Start at 0, increase as coverage improves
]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["fastapi_ws_rpc"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
